--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -3,12 +3,12 @@
 }
 
 .sidebar {
+    position: absolute;
     background-color: #393E46;
     left: 0;
     top: 0;
-    position: absolute; 
     max-height: fit-content;
-    max-width: fit-content;
+    width: 20%;
     padding-left: 0;
     margin-left: 0;
 }
@@ -43,4 +43,16 @@
     margin: 1% 5% 1% 5%;
     padding: 1%;
     max-width: 90%;
+}
+
+.navbar {
+    background-color: #393E46;
+    max-height: fit-content;
+    margin-left: 20%;
+}
+
+.user-name {
+    padding: 2%;
+    text-align: right;
+    color: #F2F2F2;
 }
