--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,5 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+
 * {
     box-sizing: border-box;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+body {
+    margin: 0px;
+    height: 100%;
+    background-color: #F2F2F2;
+    background-image: url("https://www.transparenttextures.com/patterns/concrete-wall.png");
+}
+
+.container {
+    height: 100%;
 }
 
 .sidebar {
@@ -7,16 +21,22 @@
     background-color: #393E46;
     left: 0;
     top: 0;
-    max-height: fit-content;
+    height: 100%;
     width: 20%;
     padding-left: 0;
     margin-left: 0;
+    box-shadow: 0 0 10px 1px #393E4680;
 }
 
 .sidebar ul {
     margin: auto 0;
     padding-left: 0px;
     list-style: none;
+}
+
+.sidebar h1 {
+    margin-left: auto;
+    color: #F2F2F2;
 }
 
 .sidebar li {
@@ -46,7 +66,7 @@
 }
 
 .navbar {
-    background-color: #393E46;
+    background-color: #5C636E;
     max-height: fit-content;
     margin-left: 20%;
 }
@@ -56,3 +76,28 @@
     text-align: right;
     color: #F2F2F2;
 }
+
+.content {
+    margin: 1% 1% 1% 21%;
+    padding: 3%;
+    background-color: #F2F2F2;
+    border: 1px solid #393E46;
+    border-radius: 10px;
+    box-shadow: 0px 0px 43px 17px #5C636E50;
+}
+
+.content table {
+    margin: 0;
+}
+
+.content table tr th {
+    padding: 1% 8%;
+    border: 1px solid #5C636E;
+}
+
+.content table tr td {
+    width: 3%;
+    padding: 1% 8%;
+    border: 1px solid #5C636E;
+}
+
