--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -36,6 +36,36 @@ body {
     color: var(--orange) !important;
 }
 
+.logo-container {
+    padding: 8%;
+}
+
+.tabs {
+    background-color: var(--white);
+}
+
+.tabs .tab a {
+    color: var(--black);
+    /*Custom Text Color*/
+  }
+  
+  .tabs .tab a:hover {
+    color:var(--orange);
+    /*Custom Color On Hover*/
+  }
+
+.tabs .tab a:focus.active {
+    color: var(--black) !important;
+    /*Custom Text Color While Active*/
+    background-color: var(--orange);
+    opacity: 10%;
+    /*Custom Background Color While Active*/
+  }
+
+.tabs .indicator {
+    background-color:var(--orange);
+}
+
 .sidenav {
     background-color: var(--white);
 }
