--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -3,6 +3,7 @@
     --orange: #F96D00;
     --black: #393E46;
     --grey: #5C636E;
+    --orange-low: #F96D0020;
 }
 
 * {
@@ -50,15 +51,14 @@ body {
   }
   
   .tabs .tab a:hover {
-    color:var(--orange);
+    color:var(--black) !important;
     /*Custom Color On Hover*/
   }
 
 .tabs .tab a:focus.active {
     color: var(--black) !important;
     /*Custom Text Color While Active*/
-    background-color: var(--orange);
-    opacity: 10%;
+    background-color: var(--orange-low);
     /*Custom Background Color While Active*/
   }
 
@@ -161,7 +161,6 @@ body {
 }
 
 .waves-effect.waves-orange .waves-ripple {
-    background-color: var(--orange);
-    opacity: 10%;
+    background-color: var(--orange-low);
 }
 
